docs/v0.2.0a41/_sources/reference/_autosummary/hpcflow.sdk.submission.schedulers.sge.SGEPosix.rst.txt
hpcflow.sdk.submission.schedulers.sge.SGEPosix
==============================================

.. currentmodule:: hpcflow.sdk.submission.schedulers.sge

.. autoclass:: SGEPosix
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:
   
   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~SGEPosix.format_array_request
      ~SGEPosix.format_core_request_lines
      ~SGEPosix.format_options
      ~SGEPosix.format_std_stream_file_option_lines
      ~SGEPosix.format_switch
      ~SGEPosix.get_submit_command
      ~SGEPosix.get_version_info
      ~SGEPosix.parse_submission_output
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~SGEPosix.DEFAULT_ARRAY_ITEM_VAR
      ~SGEPosix.DEFAULT_ARRAY_SWITCH
      ~SGEPosix.DEFAULT_CWD_SWITCH
      ~SGEPosix.DEFAULT_DEL_CMD
      ~SGEPosix.DEFAULT_JS_CMD
      ~SGEPosix.DEFAULT_SHEBANG_ARGS
      ~SGEPosix.DEFAULT_SHELL_ARGS
      ~SGEPosix.DEFAULT_SHOW_CMD
      ~SGEPosix.DEFAULT_SUBMIT_CMD
   
   